--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name = Jeff Geerling
-  email = geerlingguy@mac.com
+	name = Don Hunt
+	email = DonPwrShellHunt@users.noreply.github.com
 [core]
   editor = vi
   excludesfile = ~/.gitignore
@@ -12,14 +12,6 @@
   status = auto
 [web]
   browser = google-chrome
-[credential]
-  helper = osxkeychain
-[push]
-  default = simple
-[merge]
-  tool = kdiff3
-[difftool]
-  prompt = false
 [alias]
   c = commit
   ca = commit -a
